index page nav changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                  <ul>
                 <li><a href="#">A LEVEL HOTEL</a></li>
 				<li><a href="#">MEDIUM RANGE HOTEL</a></li>
-				<li><a href="#">LOW RANGE HOTEL</a></li>
+				<li><a href="#">HOME STAY</a></li>
 
 	</ul>
 </li>
