--- a/site.html
+++ b/site.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width", initial-scale=1>
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="site.css">
 	
 </head>
 <body id="myPage">
@@ -14,48 +15,46 @@
 			<header class="d-flex-r clear justify-content-space-between">
 				<!--logo-->
 				<div class="my-1" id="logo"><a href="index.html"><img src="img/ujjwa.png"></a></div>
-
-<!--navigation bar-->
-<nav class="fl_right font-xs text-uppercase" id="main-navbar">
-	<ul class="clear">
-		<li class="active"><a href="index.hmtl">Home</a></li>
-		<li><a href="#">hotels</a>
-			<ul>
-				<li><a href="#">annapurnaa hotel</a></li>
-				<li><a href="#">pokhara lakeside</a></li>
-				<li><a href="#">thamel rockandale</a></li>
-				<li><a href="#">himalayas hotel</a></li>
-			</ul>
-		</li>
-		<li><a href="#" class="drop">packages</a>
-			<ul>
-				<li><a href="#">level 2</a></li>
-				<li><a href="#" class="drop">level 2+drop</a>
-                 <ul>
-                <li><a href="#">A LEVEL HOTEL</a></li>
-				<li><a href="#">MEDIUM RANGE HOTEL</a></li>
-				<li><a href="#">LOW RANGE HOTEL</a></li>
-
-	</ul>
-</li>
-</ul>
-</li>
-                <li><a href="#">Insurance</a></li>
-				<li><a href="#">blog</a></li>
-				<li><a href="#">Contact US</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div id="banner-text" class="d-flex-c text-left">
-		<article>
-         <p class="my-1  text-uppercase font-xs">nepal once is not enough</p>
-         <h1 class="headng text-left text-uppercase text-bold font-x3 my-1">Welcome to nepal</h1>
-        <p class="my-3" font-xs">“Chasing angels or fleeing demons, go to the mountains.” 
-        <br>“If Nepal is to become a new Nepal, she must first become free from ethnic segregation.”</p>
-        <footer><button class="btn" href="#">Click To Know More</button></footer>
-		</article>
-	</div>
-</div>
+				<!--navigation bar-->
+				<nav class="fl_right font-xs text-uppercase" id="main-navbar">
+					<ul class="clear">
+						<li class="active"><a href="index.hmtl">Home</a></li>
+						<li><a href="#">hotels</a>
+							<ul>
+								<li><a href="#">annapurnaa hotel</a></li>
+								<li><a href="#">pokhara lakeside</a></li>
+								<li><a href="#">thamel rockandale</a></li>
+								<li><a href="#">himalayas hotel</a></li>
+							</ul>
+						</li>
+						<li><a href="#" class="drop">packages</a>
+							<ul>
+								<li><a href="#">level 2</a></li>
+								<li><a href="#" class="drop">level 2+drop</a>
+					                <ul>
+						                <li><a href="#">A LEVEL HOTEL</a></li>
+										<li><a href="#">MEDIUM RANGE HOTEL</a></li>
+										<li><a href="#">LOW RANGE HOTEL</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+		                <li><a href="#">Insurance</a></li>
+						<li><a href="#">blog</a></li>
+						<li><a href="#">Contact US</a></li>
+					</ul>
+				</nav>
+			</header>
+			<div id="banner-text" class="d-flex-c text-left">
+				<article>
+		         <p class="my-1  text-uppercase font-xs">nepal once is not enough</p>
+		         <h1 class="headng text-left text-uppercase text-bold font-x3 my-1">Welcome to nepal</h1>
+		        <p class="my-3" font-xs">“Chasing angels or fleeing demons, go to the mountains.” 
+		        <br>“If Nepal is to become a new Nepal, she must first become free from ethnic segregation.”</p>
+		        <footer><button class="btn" href="#">Click To Know More</button></footer>
+				</article>
+			</div>
+		</div>
 <div class="wrapper bg-green">
 	<footer class="d-flex-r clear container text-white">
 		<div class="mx-2">
