site file added

--- a/site.html
+++ b/site.html
@@ -55,52 +55,46 @@
 				</article>
 			</div>
 		</div>
-<div class="wrapper bg-green">
-	<footer class="d-flex-r clear container text-white">
-		<div class="mx-2">
-			<h6 class="heading font-x1 my-1">Contact Us</h6>
-			<ul class="nospace linkedlist contact">
-				<li><i class="fa fa-map-marker"></i>
-					<address>Street Name &amp; Number,Town,Postcode/zip</address>
-				</li>
-				<li><i class="fa fa-phone"></i> +977 982345678</li>
-				<li><i class="fa fa-envelope-o"></i>achshelp00@gmail.com</li>
-				<li><a class="text-white" href="https://www.youtube.com/watch?v=ut-U-4m42aQ/" target="_blank">
-					<i class="fa fa-youtube"></i>visitnepal2020</a></li>
-				
-			</ul>
+		<div class="wrapper bg-green">
+			<footer class="d-flex-r clear container text-white">
+				<div class="mx-2">
+					<h6 class="heading font-x1 my-1">Contact Us</h6>
+					<ul class="nospace linkedlist contact">
+						<li><i class="fa fa-map-marker"></i>
+							<address>Street Name &amp; Number,Town,Postcode/zip</address>
+						</li>
+						<li><i class="fa fa-phone"></i> +977 982345678</li>
+						<li><i class="fa fa-envelope-o"></i>achshelp00@gmail.com</li>
+						<li><a class="text-white" href="https://www.youtube.com/watch?v=ut-U-4m42aQ/" target="_blank">
+							<i class="fa fa-youtube"></i>visitnepal2020</a></li>
+					</ul>
+				</div>
+				<div class="mx-2">
+					<h6 class="heading my-1 font-x1">About</h6>
+					<ul class="nospace linkedlist">
+					    <li><a href="#">Company Profile</a></li>
+						<li><a href="#">Sales</a></li>
+						<li><a href="#">Support</a></li>
+						<li><a href="#">Blog</a></li>
+					</ul>
+				</div>
+				<div class="mx-2">
+					<h6 class="heading my-1 font-x1">Subscribe</h6>
+					<p class="my-1">ENJOY</p>
+					<form method="post" action="#">
+						<fieldset>
+							<input type="text" class="my-1" placeholder="Name">
+							<input type="emai" class="my-1" placeholder="Email">
+							<button class="btn">Submit</button>
+						</fieldset>
+					</form>
+				</div>
+			</footer>
 		</div>
-<div class="mx-2">
-	<h6 class="heading my-1 font-x1">About</h6>
-	<ul class="nospace linkedlist">
-		    <li><a href="#">Company Profile</a></li>
-			<li><a href="#">Sales</a></li>
-			<li><a href="#">Support</a></li>
-			<li><a href="#">Blog</a></li>
-			
-		</ul>
-	</div>
-	<div class="mx-2">
-		<h6 class="heading my-1 font-x1">Subscribe</h6>
-		<p class="my-1">ENJOY</p>
-		<Form method="post" action="#">
-			<fieldset>
-				<input type="text" class="my-1" placeholder="Name">
-				<input type="emai" class="my-1" placeholder="Email">
-				<button class="btn">Submit</button>
-
-			</fieldset>
-</div>
-</footer>
+	</section>
 <div class="d-flex-r clear justify-content-space-between" id="copyright">
 	<p class="d-flex-r">Copyright &copy; 2019 -All Rights Reserved -<a href="#">Domain NAME</a></p>
 	<a href="myPage"></a>
-
 </div>
-
-
-
-
-
 </body>
 </html>
