Site page update

--- a/site.html
+++ b/site.html
@@ -77,7 +77,41 @@
 		</div>
 	</section>
 	<section id="side-section">
-		
+		<div>
+			<h4>Side Section</h4>
+		</div>
+		<div id="side-list">
+			<ul>
+				<li>
+					<img src="img1.jpeg" alt="Side Image">
+					<div></div>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<img src="img1.jpeg" alt="Side Image">
+					<div></div>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<img src="img1.jpeg" alt="Side Image">
+					<div></div>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<img src="img1.jpeg" alt="Side Image">
+					<div></div>
+				</li>
+			</ul>
+		</div>
+		<div id="advertisement">
+			<div id="small-label"></div>
+			<div>
+				<img src="ad.jpeg" alt="Advertisement">
+			</div>
+		</div>
 	</section>
 <div class="d-flex-r clear justify-content-space-between" id="copyright">
 	<p class="d-flex-r">Copyright &copy; 2019 -All Rights Reserved -<a href="#">Domain NAME</a></p>
