--- a/site.html
+++ b/site.html
@@ -9,110 +9,78 @@
 	
 </head>
 <body id="myPage">
-	<section id="main-section">
-		<div id="main-image"></div>
-		<div id="info">
-			<h1 id="title">Title of the site</h1>
-			<h4 id="category">Category</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat.</p>
+	<div id="wrapper">
+		<section id="main-section">
+			<div id="main-image"></div>
+			<div id="info">
+				<h1 id="title">This is the title of the site</h1>
+				<h4 id="category">Category</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat.</p>
-			<div id="images">
-				<figure>
-					<img src="img1.jpeg" alt="Image 1">
-					<figcaption>Image 1</figcaption>
-				</figure>
-				<figure>
-					<img src="img2.jpeg" alt="Image 1">
-					<figcaption>Image 1</figcaption>
-				</figure>
-				<figure>
-					<img src="img.jpeg" alt="Image 1">
-					<figcaption>Image 1</figcaption>
-				</figure>
-				<figure>
-					<img src="img1.jpeg" alt="Image 1">
-					<figcaption>Image 1</figcaption>
-				</figure>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat.</p>
+				<div id="images">
+					<figure>
+						<img src="img/img1.jpg" alt="Image 1">
+						<figcaption>Image 1</figcaption>
+					</figure>
+					<figure>
+						<img src="img/img2.jpg" alt="Image 2">
+						<figcaption>Image 2</figcaption>
+					</figure>
+					<figure>
+						<img src="img/img3.jpg" alt="Image 3">
+						<figcaption>Image 3</figcaption>
+					</figure>
+					<figure>
+						<img src="img/img5.jpg" alt="Image 5">
+						<figcaption>Image 4</figcaption>
+					</figure>
+				</div>
+				<div>
+					<table>
+						<tbody>
+							<tr>
+								<th>Info Title</th>
+								<td>Info Data</td>
+							</tr>
+							<tr>
+								<th>Info Title</th>
+								<td>Info Data</td>
+							</tr>
+							<tr>
+								<th>Info Title</th>
+								<td>Info Data</td>
+							</tr>
+							<tr>
+								<th>Info Title</th>
+								<td>Info Data</td>
+							</tr>
+							<tr>
+								<th>Info Title</th>
+								<td>Info Data</td>
+							</tr>
+							<tr>
+								<th>Info Title</th>
+								<td>Info Data</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div id="Map">
+					
+				</div>
 			</div>
-			<div>
-				<table>
-					<tbody>
-						<tr>
-							<th>Info Title</th>
-							<td>Info Data</td>
-						</tr>
-						<tr>
-							<th>Info Title</th>
-							<td>Info Data</td>
-						</tr>
-						<tr>
-							<th>Info Title</th>
-							<td>Info Data</td>
-						</tr>
-						<tr>
-							<th>Info Title</th>
-							<td>Info Data</td>
-						</tr>
-						<tr>
-							<th>Info Title</th>
-							<td>Info Data</td>
-						</tr>
-						<tr>
-							<th>Info Title</th>
-							<td>Info Data</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-			<div id="Map">
-				
-			</div>
-		</div>
-	</section>
-	<section id="side-section">
-		<div>
-			<h4>Side Section</h4>
-		</div>
-		<div id="side-list">
-			<ul>
-				<li>
-					<img src="img1.jpeg" alt="Side Image">
-					<div></div>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<img src="img1.jpeg" alt="Side Image">
-					<div></div>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<img src="img1.jpeg" alt="Side Image">
-					<div></div>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<img src="img1.jpeg" alt="Side Image">
-					<div></div>
-				</li>
-			</ul>
-		</div>
-		<div id="advertisement">
-			<div id="small-label"></div>
-			<div>
-				<img src="ad.jpeg" alt="Advertisement">
-			</div>
-		</div>
-	</section>
+		</section>
+		<section id="side-section">
+			
+		</section>
+	</div>
 <div class="d-flex-r clear justify-content-space-between" id="copyright">
 	<p class="d-flex-r">Copyright &copy; 2019 -All Rights Reserved -<a href="#">Domain NAME</a></p>
 	<a href="myPage"></a>
