Homestay and Busfare pages added again

--- a/busfare.html
+++ b/busfare.html
@@ -45,12 +45,12 @@
 			</ul>
 		</nav>
 	</header>
-	<div id="main-image"></div>
+	<div id="bus-main-image"></div>
 	<div id="wrapper">
 		<section id="main-section">
 			<div id="info">
-				<h1 id="title">Annapurna Hotel Durbar Marg, Kathmandu</h1>
-				<h4 id="category">Hotels</h4>
+				<h1 id="title">Bus Fares In Nepal and How to Travel in Nepal</h1>
+				<h4 id="category">Bus Fare</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -62,20 +62,16 @@
 				consequat.</p>
 				<div id="images">
 					<figure>
-						<img src="img/img1.jpg" alt="Image 1">
-						<figcaption>Annapurna Hotel Image 1</figcaption>
+						<img src="img/bus1.jpg" alt="Image 1">
+						<figcaption>Nepal Buses Image 1</figcaption>
 					</figure>
 					<figure>
-						<img src="img/img2.jpg" alt="Image 2">
-						<figcaption>Annapurna Hotel Image 2</figcaption>
+						<img src="img/bus2.jpg" alt="Image 2">
+						<figcaption>Nepal Buses Image 2</figcaption>
 					</figure>
 					<figure>
-						<img src="img/img3.jpg" alt="Image 3">
-						<figcaption>Annapurna Hotel Image 3</figcaption>
-					</figure>
-					<figure>
-						<img src="img/img5.jpg" alt="Image 5">
-						<figcaption>Annapurna Hotel Image 4</figcaption>
+						<img src="img/bus3.jpg" alt="Image 3">
+						<figcaption>Nepal Buses Image 3</figcaption>
 					</figure>
 				</div>
 				<div id="table-info">
@@ -121,27 +117,14 @@
 			</div>
 		</section>
 		<section id="side-section">
-			<h4>Other Hotels</h4>
-			<div id="side-list">
-				<div>
-					<img src="img/img1.jpg" alt="Side Image">
-					<div>
-						<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></div>
-				</div>
-				<div>
-					<img src="img/img5.jpg" alt="Side Image">
-					<div>
-						<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing eli</a></div>
-				</div>
-				<div>
-					<img src="img/img3.jpg" alt="Side Image">
-					<div>
-						<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing eli</a></div>
-				</div>
-				<div id="ad">
-					<div id="label">Advertisement</div>
-					<img src="img/ad.jpg">
-				</div>
+			<h4>Bus Fare Form</h4>
+			<div id="fare-form">
+				<form action="#" method="GET">
+					<input type="text" id="bus-from" name="bus-from" placeholder="Enter the bus to take from">
+					<input type="text" id="bus-to" name="bus-to" placeholder="Enter the bus to take to">
+					<input type="date" name="date">
+					<input type="submit" value="Find Fare" name="submit">
+				</form>
 			</div>
 			</div>
 		</section>
