--- a/homestay.html
+++ b/homestay.html
@@ -45,12 +45,12 @@
 			</ul>
 		</nav>
 	</header>
-	<div id="main-image"></div>
+	<div id="home-main-image"></div>
 	<div id="wrapper">
 		<section id="main-section">
 			<div id="info">
-				<h1 id="title">Annapurna Hotel Durbar Marg, Kathmandu</h1>
-				<h4 id="category">Hotels</h4>
+				<h1 id="title">Beautiful and Cheap Home Stay in Baneshwor Kathmandu</h1>
+				<h4 id="category">Home Stay</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -62,20 +62,16 @@
 				consequat.</p>
 				<div id="images">
 					<figure>
-						<img src="img/img1.jpg" alt="Image 1">
+						<img src="img/h1.jpg" alt="Image 1">
 						<figcaption>Annapurna Hotel Image 1</figcaption>
 					</figure>
 					<figure>
-						<img src="img/img2.jpg" alt="Image 2">
+						<img src="img/h2.jpg" alt="Image 2">
 						<figcaption>Annapurna Hotel Image 2</figcaption>
 					</figure>
 					<figure>
-						<img src="img/img3.jpg" alt="Image 3">
+						<img src="img/h3.jpg" alt="Image 3">
 						<figcaption>Annapurna Hotel Image 3</figcaption>
-					</figure>
-					<figure>
-						<img src="img/img5.jpg" alt="Image 5">
-						<figcaption>Annapurna Hotel Image 4</figcaption>
 					</figure>
 				</div>
 				<div id="table-info">
@@ -121,20 +117,20 @@
 			</div>
 		</section>
 		<section id="side-section">
-			<h4>Other Hotels</h4>
+			<h4>Other Home Stays</h4>
 			<div id="side-list">
 				<div>
-					<img src="img/img1.jpg" alt="Side Image">
+					<img src="img/h1.jpg" alt="Side Image">
 					<div>
 						<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit</a></div>
 				</div>
 				<div>
-					<img src="img/img5.jpg" alt="Side Image">
+					<img src="img/h2.jpg" alt="Side Image">
 					<div>
 						<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing eli</a></div>
 				</div>
 				<div>
-					<img src="img/img3.jpg" alt="Side Image">
+					<img src="img/h3.jpg" alt="Side Image">
 					<div>
 						<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing eli</a></div>
 				</div>
