--- a/index.html
+++ b/index.html
@@ -14,35 +14,36 @@
 				<!--logo-->
 				<div class="my-1" id="logo"><a href="index.html"><img src="img/ujjwa.png"></a></div>
 
-<!--navigation bar-->
-<nav class="fl_right font-xs text-uppercase" id="main-navbar">
-	<ul class="clear">
-		<li class="active"><a href="index.hmtl">Home</a></li>
-		<li><a href="#">hotels</a>
-			<ul>
-				<li><a href="#">annapurnaa hotel</a></li>
-				<li><a href="#">pokhara lakeside</a></li>
-				<li><a href="#">thamel rockandale</a></li>
-				<li><a href="#">himalayas hotel</a></li>
-			</ul>
-		</li>
-		<li><a href="#" class="drop">packages</a>
-			<ul>
-				<li><a href="#">level 2</a></li>
-				<li><a href="#" class="drop">level 2+drop</a>
-                 <ul>
-                <li><a href="#">A LEVEL HOTEL</a></li>
-				<li><a href="#">MEDIUM RANGE HOTEL</a></li>
-				<li><a href="#">HOME STAY</a></li>
+	<!--navigation bar-->
+	<nav class="fl_right font-xs text-uppercase" id="main-navbar">
+		<ul class="clear">
+			<li class="active"><a href="index.hmtl">Home</a></li>
+			<li><a href="#">Services</a>
+				<ul>
+						<li><a href="site.html">Hotels</a></li>
+						<li><a href="homestay.html">Home Stay</a></li>
+						<li><a href="#">Tourist Areas</a></li>
+						<li><a href="busfare.html">Bus Fares</a></li>
+					</ul>
+			</li>
+			</li>
+			<li><a href="#" class="drop">Packages</a>
+				<ul>
+					<li><a href="#">Level 2</a></li>
+					<li><a href="#" class="drop">Level 2+drop</a>
+						<ul>
+							<li><a href="#">A LEVEL HOTEL</a></li>
+							<li><a href="#">MEDIUM RANGE HOTEL</a></li>
+							<li><a href="#">HOME STAY</a></li>
 
-	</ul>
-</li>
-</ul>
-</li>
-                <li><a href="#">Insurance</a></li>
-				<li><a href="#">blog</a></li>
-				<li><a href="#">Contact US</a></li>
-			</ul>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li><a href="#">Insurance</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Contact US</a></li>
+		</ul>
 		</nav>
 	</header>
 	<div id="banner-text" class="d-flex-c text-left">
